Some PMD clean up
git-svn-id: https://cdk.svn.sourceforge.net/svnroot/cdk/cdk/trunk@11757 eb4e18e3-b210-0410-a6ab-dec725e4b171